# blog

./: .babelrc  .gitignore  .gitmodules  .sosrc  Build.hs  Flags.hs  Introit.hs  Main.hs  Makefile  Page.hs  Pages.hs  Post.hs  README.md  Routes.hs  Shakefile.hs  Site.hs  TODO.md  Targets.hs  Templates.hs  Things.hs  Types.hs  URLs.hs  Utils.hs  blog.cabal  browsersync.js  cabal.project  cabal.project.freeze  config.local  config.production  deploy.fish  hie.yaml  index.js  package.json  rollup.config.js  server.hs  shake  stack.yaml
Page/: Meta.hs
Templates/: Archive.hs  Home.hs  Page.hs  Post.hs
hs-sigs/: List.hsig
hs-src/: Actions.hs  Build.hs  BuildV2.hs  CLI.hs  FilePath.hs  Flags.hs  Introit.hs  Main.hs  Options.hs  Post.hs  Properties.hs  Prose.hs  Render.hs  Routes.hs  Rules.hs  Site.hs  Templates.hs  Text.hs  Thing.hs  Utilities.hs  Write.hs
hs-src/List/: Base.hs
hs-src/Templates/: Style.hs
scripts/: commit.fish  new-post.fish  typeset.fish
server/: blog-server.cabal  server.hs
site-src/: posts  styles.scss
site-src/assets/: images
site-src/fonts/: fonts.css
site-src/scripts/: colour-scheme.js
site-src/styles/: magenta.scss  three-dots.scss
styles/: magenta.scss
