name:                blog
version:             1.0.0.0
synopsis:            Mostly nonsense
description:         It's my blog! It really is mostly nonsense.
homepage:            https://parsonyorick.github.io/
license:             MIT
license-file:        LICENSE
author:              Alan Rempel
maintainer:          alan.rempel+parsonyorick@gmail.com
copyright:           Posts copyright Alan Rempel © 2018
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable blog
  main-is:             Main.hs
  other-modules:       BuildV2
                     , Templates
                     , Routes
                     , Post
                     , Introit
                     , Text
  default-extensions:  OverloadedStrings
                     , NamedFieldPuns
                     , RecordWildCards
                     , GADTs
                     , TypeInType
                     , BlockArguments
  build-depends:       base >= 4.10 && < 5
                     , containers
                     , filepath
                     , directory >= 1.2.5
                     , lucid >= 2.9.7 && < 3.0
                     , megaparsec
                     , mmark >= 0.0.7.1 && < 0.1
                     , mmark-ext >= 0.1.0.0 && < 1.0
                     , time >= 1.5
                     , text
                     , uri-encode
                     , yaml >= 0.8.23 && < 1.0
  hs-source-dirs:      hs-src
  default-language:    Haskell2010
