name:                blog
version:             1.0.0.0
synopsis:            Mostly nonsense
description:         It's my blog! It really is mostly nonsense.
homepage:            https://parsonyorick.github.io/
license:             MIT
license-file:        LICENSE
author:              Alan Rempel
maintainer:          alan.rempel+parsonyorick@gmail.com
copyright:           Posts copyright Alan Rempel © 2018
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable blog
  main-is:             Main.hs
  other-modules:       Build
                     , Flags
                     , Actions
                     , Templates
                     , Routes
                     , Post
                     , Utilities
                     , Introit
                     , Text
  default-extensions:  OverloadedStrings
                     , NamedFieldPuns
                     , RecordWildCards
  other-extensions:    GADTs, ViewPatterns
                     , DeriveGeneric, DeriveAnyClass
                     , GeneralizedNewtypeDeriving
                     , DuplicateRecordFields
  ghc-options:         -threaded -rtsopts "-with-rtsopts=-I0 -qg"
  build-depends:       base >= 4.10 && < 5
                     , bytestring
                     , containers
                     , directory >= 1.2.5
                     , hashable
                     , lucid >= 2.9.7 && < 3.0
                     , mmark >= 0.0.7.1 && < 0.1
                     , mmark-ext >= 0.1.0.0 && < 1.0
                     , megaparsec
                     , shake >= 0.16 && < 0.17
                     , time >= 1.5
                     , text
                     , transformers
                     , uri-encode
                     , yaml >= 0.8.23 && < 1.0
  hs-source-dirs:      hs-src
  default-language:    Haskell2010
