name:                blog
version:             1.0.0.0
synopsis:            Mostly nonsense
description:         It's my blog! It really is mostly nonsense.
homepage:            https://parsonyorick.github.io/
license:             MIT
license-file:        LICENSE
author:              Alan Rempel
maintainer:          alan.rempel+parsonyorick@gmail.com
copyright:           Posts copyright Alan Rempel © 2018
category:            Web
build-type:          Simple
cabal-version:       >=1.25

executable blog
  main-is:             Main.hs
  other-modules:       BuildV2
                     , CLI
                     , FilePath
                     , Templates
                     , Templates.Style
                     , Options
                     , Rules
                     , Post
                     , Introit
                     , Text
                     , Write
  default-extensions:  OverloadedStrings
                     , NamedFieldPuns
                     , RecordWildCards
                     , FlexibleContexts
                     , BlockArguments
  build-depends:       base >= 4.10 && < 5
                     , binary
                     , bytestring
                     , containers
                     , filepath
                     , foldl
                     , directory >= 1.2.6
                     , list-base
                     , list-indef
                     , lucid >= 2.9.7 && < 3.0
                     , megaparsec >= 7.0 && < 8.0
                     , mmark >= 0.0.7.1 && < 0.1
                     , mmark-ext >= 0.1.0.0 && < 1.0
                     , modern-uri
                     , optparse-applicative >= 0.14 && < 0.16
                     , shake >= 0.18.2 && < 0.19
                     , time >= 1.5
                     , text
                     , transformers
                     , typed-process ^>= 0.2.5
                     , unordered-containers
                     , yaml >= 0.8.23 && < 1.0
  mixins:              list-base (List.Base as List)
  hs-source-dirs:      hs-src
  default-language:    Haskell2010

library list-indef
  signatures:       List
  build-depends:    base
  hs-source-dirs:   hs-sigs
  default-language: Haskell2010

library list-base
  exposed-modules:      List.Base
  build-depends:        base
  hs-source-dirs:       hs-src
  default-language:     Haskell2010
